--- a/mmp-fe/package.json
+++ b/mmp-fe/package.json
@@ -11,9 +11,12 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "bootstrap": "^5.2.3",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "wagmi": "^0.12.12",
