--- a/mmp-fe/.env.example
+++ b/mmp-fe/.env.example
@@ -10,3 +10,5 @@ REACT_APP_MAX_ROWS=256
 REACT_APP_MAX_COLUMNS=256
 
 REACT_APP_IPFS_BASE_URI = https://gateway.pinata.cloud/ipfs/
+
+REACT_APP_MMP_BASE_URL = http://millionmaticpage.fun
