--- a/mmp-fe/.env.example
+++ b/mmp-fe/.env.example
@@ -12,3 +12,5 @@ REACT_APP_MAX_COLUMNS=256
 REACT_APP_IPFS_BASE_URI = https://coffee-blushing-vole-954.mypinata.cloud/ipfs/
 
 REACT_APP_MMP_BASE_URL = http://millionmaticpage.fun
+
+REACT_APP_OPENSEA_BASE_URL = https://testnets.opensea.io/assets/mumbai/
